# pocket-attorney-rag

./: .env  README.md  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  query.py  user.py
app/cache/: redis_client.py  semantic_cache.py  serializer.py
app/core/: JsonFormatter.py  config.py  container.py  deps.py  logger.py  security.py
app/data/: constitution.json  scrapper.py
app/db/: session.py
app/index_store/: bm25.json  index.faiss  metadata.json
app/ingestion/: build_index.py
app/llm/: base.py  factory.py
app/llm/prompts/: legal.py
app/llm/providers/: anthropic.py  ollama.py  openai.py
app/models/: user.py
app/schemas/: user.py
app/services/: bm25_store.py  embedding.py  hybrid_retriever.py  pinecone_store.py  query_service.py  rag_pipeline.py  user_service.py  vector_store.py
app/services/chunking/: LangChainChunker.py  SimpleChunker.py  base.py  constitution_chunker.py  factory.py
app/services/retrievers/: hybrid_retriever.py
app/utils/: llm_formatter.py  utility.py
docker/: docker-compose.yml
